Added SEO component and modified account date and fixed total price

--- a/components/Orders/Orders.scss
+++ b/components/Orders/Orders.scss
@@ -45,10 +45,7 @@
           a {
             color: $color-white;
             font-family: $font-secondary;
-
-            &:hover {
-              color: $primary;
-            }
+            border-bottom: 1px solid $color-white;
           }
         }
       }
