--- a/components/ListBooks/listbooks.scss
+++ b/components/ListBooks/listbooks.scss
@@ -16,6 +16,26 @@
   &__card {
     padding: 1.5rem;
     box-shadow: $light-shadow;
+    position: relative;
+    cursor: pointer;
+
+    &__modal {
+      position: absolute;
+      display: grid;
+      place-content: center;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      top: 0;
+      left: 0;
+      z-index: 1;
+      color: $color-white;
+      font-weight: bold;
+
+      &--hidden {
+        display: none;
+      }
+    }
 
     &__content {
       text-align: center;
