--- a/components/Navbar/Navbar.scss
+++ b/components/Navbar/Navbar.scss
@@ -1,96 +1,94 @@
-.navbar {
+.topmenu {
   width: 100%;
-  background-color: $color-white-3;
+  background-color: $color-dark;
 
-  &__topmenu {
-    width: 100%;
+  &__account {
     padding: 0.25rem $padding-big-screen;
-    background-color: $color-dark;
     color: $color-white;
-    display: flex;
-    align-items: center;
+    @include CenterContainer();
 
     @include MediaQuery(700px) {
       padding: 0.25rem $padding-ms-screen;
     }
 
-    &__account {
-      width: 100%;
-      &__list {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
+    &__list {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
 
-        @include MediaQuery(990px) {
-          justify-content: center;
-        }
+      @include MediaQuery(990px) {
+        justify-content: center;
+      }
+
+      @include MediaQuery(550px) {
+        justify-content: space-between;
+      }
+
+      li {
+        position: relative;
+      }
+
+      li:not(:last-child) {
+        margin-right: 2.5rem;
+      }
+
+      svg {
+        margin-top: 0.3rem;
+      }
+
+      &__link {
+        color: $color-white;
+        font-size: 1.4rem;
+        font-family: $font-secondary;
+        font-weight: 500;
+        transition: all 0.2s ease-in-out;
 
         @include MediaQuery(550px) {
-          justify-content: space-between;
-        }
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
 
-        li {
-          position: relative;
-        }
-
-        li:not(:last-child) {
-          margin-right: 2.5rem;
-        }
-
-        svg {
-          margin-top: 0.3rem;
-        }
-
-        &__link {
-          color: $color-white;
-          font-size: 1.4rem;
-          font-family: $font-secondary;
-          font-weight: 500;
-          transition: all 0.2s ease-in-out;
-
-          @include MediaQuery(550px) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-            &__text {
-              font-size: 1rem;
-              text-align: center;
-            }
+          &__text {
+            font-size: 1rem;
+            text-align: center;
           }
+        }
 
-          @include MediaQuery(340px) {
-            &__text {
-              display: none;
-            }
+        @include MediaQuery(340px) {
+          &__text {
+            display: none;
           }
         }
       }
     }
   }
+}
 
-  &__navigation {
+.navigation {
+  width: 100%;
+  background-color: $primary;
+
+  @include MediaQuery(990px) {
+    grid-template-columns: 100%;
+
+    &__links {
+      grid-row: 3 / 4;
+    }
+  }
+
+  @include MediaQuery(700px) {
+    padding: 0.25rem $padding-ms-screen;
+  }
+
+  &__grid {
     padding: 0.25rem $padding-big-screen;
     display: grid;
     grid-template-columns: auto repeat(2, 1fr);
     gap: 1rem;
     align-items: center;
     justify-items: center;
-    background-color: $primary;
-
-    @include MediaQuery(990px) {
-      grid-template-columns: 100%;
-
-      &__links {
-        grid-row: 3 / 4;
-      }
-    }
-
-    @include MediaQuery(700px) {
-      padding: 0.25rem $padding-ms-screen;
-    }
-
+    @include CenterContainer();
     &__logo {
       h1 {
         color: $color-white;
