--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -18,6 +18,7 @@
     position: relative;
     text-align: center;
     padding: 0 5rem;
+    @include CenterContainer();
 
     h1 {
       font-size: 5rem;
