--- a/components/Services/Services.scss
+++ b/components/Services/Services.scss
@@ -1,33 +1,38 @@
 .services {
   background-color: $primary;
-  padding: $padding-big-screen;
-  display: grid;
-  text-align: center;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  grid-gap: 3rem;
+  width: 100%;
 
-  @include MediaQuery(700px) {
-    padding: $padding-big-screen $padding-ms-screen;
-  }
-
-  @include MediaQuery(430px) {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  }
-
-  &__card {
-    width: 100%;
+  &__grid {
+    padding: $padding-big-screen;
     display: grid;
-    gap: 2rem;
-    place-content: center;
-    box-shadow: $dark-shadow;
-    padding: 1.5rem;
     text-align: center;
-    background-color: $color-white;
-    height: 30rem;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 3rem;
+    @include CenterContainer();
 
-    svg {
-      display: block;
-      margin: 0 auto;
+    @include MediaQuery(700px) {
+      padding: $padding-big-screen $padding-ms-screen;
+    }
+
+    @include MediaQuery(430px) {
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+
+    &__card {
+      width: 100%;
+      display: grid;
+      gap: 2rem;
+      place-content: center;
+      box-shadow: $dark-shadow;
+      padding: 1.5rem;
+      text-align: center;
+      background-color: $color-white;
+      height: 30rem;
+
+      svg {
+        display: block;
+        margin: 0 auto;
+      }
     }
   }
 }
