--- a/components/AccountData/AccountData.scss
+++ b/components/AccountData/AccountData.scss
@@ -1,37 +1,42 @@
 .myAccount {
-  padding: $padding-big-screen;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 2rem;
+  width: 100%;
 
-  @include MediaQuery(831px) {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-  }
-
-  @include MediaQuery(700px) {
-    padding: $padding-big-screen $padding-ms-screen;
-  }
-
-  &__data {
-    background-color: $primary;
-    color: $color-white;
-    padding: 4rem 3rem;
-    box-shadow: $light-shadow;
-    font-family: $font-secondary;
+  &__grid {
+    padding: $padding-big-screen;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 2rem;
+    @include CenterContainer();
 
     @include MediaQuery(831px) {
-      text-align: center;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
     }
 
-    h2 {
-      margin-bottom: 1rem;
+    @include MediaQuery(700px) {
+      padding: $padding-big-screen $padding-ms-screen;
+    }
+
+    &__data {
+      background-color: $primary;
       color: $color-white;
-    }
+      padding: 4rem 3rem;
+      box-shadow: $light-shadow;
+      font-family: $font-secondary;
 
-    p:not(:last-child) {
-      margin-bottom: 1rem;
+      @include MediaQuery(831px) {
+        text-align: center;
+      }
+
+      h2 {
+        margin-bottom: 1rem;
+        color: $color-white;
+      }
+
+      p:not(:last-child) {
+        margin-bottom: 1rem;
+      }
     }
   }
 }
