--- a/components/Navbar/Navbar.scss
+++ b/components/Navbar/Navbar.scss
@@ -208,6 +208,9 @@
         }
 
         button {
+          display: grid;
+          place-content: center;
+          position: relative;
           cursor: pointer;
           border: none;
           outline: none;
