--- a/components/About/About.scss
+++ b/components/About/About.scss
@@ -1,8 +1,10 @@
 .about {
+  width: 100%;
+
   &__image {
     height: calc(100vh - 8.1rem);
     position: relative;
-    width: 100%;
+    // width: 100%;
     overflow: hidden;
   }
 
@@ -15,32 +17,36 @@
   }
 
   &__content {
-    padding: $padding-big-screen;
+    width: 100%;
+
     background-color: $primary;
 
-    @include MediaQuery(700px) {
-      padding: $padding-big-screen $padding-ms-screen;
-    }
+    &__center {
+      @include CenterContainer();
+      padding: $padding-big-screen;
 
-    &__wrapper {
-      margin: 2rem 0 0 0;
-      padding: 1rem;
-      background-color: $color-white-3;
-      box-shadow: $dark-shadow;
-
-      h2 {
-        text-align: center;
-        font-weight: bold;
-        color: $primary;
+      @include MediaQuery(700px) {
+        padding: $padding-big-screen $padding-ms-screen;
       }
 
-      &__text {
+      &__info {
         padding: 1rem;
-        font-family: $font-secondary;
+        background-color: $color-white-3;
 
-        p {
-          line-height: 2.5rem;
-          font-weight: 700;
+        h2 {
+          text-align: center;
+          font-weight: bold;
+          color: $primary;
+        }
+
+        &__text {
+          padding: 1rem;
+          font-family: $font-secondary;
+
+          p {
+            line-height: 2.5rem;
+            font-weight: 700;
+          }
         }
       }
     }
