--- a/components/Modal/modal.scss
+++ b/components/Modal/modal.scss
@@ -1,10 +1,15 @@
 .modal {
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   position: fixed;
   top: 0;
   left: 0;
-  display: grid;
-  place-content: center;
   background-color: rgba(0, 0, 0, 0.7);
+
+  &__center {
+    display: grid;
+    height: 100vh;
+    place-content: center;
+    @include CenterContainer();
+  }
 }
